# GitSync

./: Cargo.toml  README.md
src/: config.rs  git.rs  github.rs  main.rs
