[package]
name = "gitsync"
version = "0.1.0"
edition = "2021"
description = "GitHub仓库自动同步备份工具"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "gitsync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
dirs = "5.0"
git2 = "0.18"
